--- a/src/app/post-list/post-list-item/post-list-item.component.html
+++ b/src/app/post-list/post-list-item/post-list-item.component.html
@@ -1,3 +1,13 @@
-<p>
-  post-list-item works!
-</p>
+<div title="postListItem">
+  <div>
+    <h2 title="titre de poste">titre</h2>
+    <div title="date">date</div>
+  </div>
+  <div>
+    <p title="contenu de post">contenu contenu contenu contenu contenu contenu contenu contenu contenu </p>
+  </div>
+  <div>
+    <button title="loveIt button">love It</button>
+    <button title="don't loveIt button">don't Love It</button>
+  </div>
+</div>
