--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,3 +1,4 @@
-<p>
-  post-list works!
-</p>
+<div title="postList">
+  <h1>Liste des Posts</h1>
+  <app-post-list-item *ngFor="let post of posts"></app-post-list-item>
+</div>
