--- a/src/app/post-list/post-list-item/post-list-item.component.html
+++ b/src/app/post-list/post-list-item/post-list-item.component.html
@@ -1,13 +1,23 @@
-<div title="postListItem">
-  <div>
-    <h2 title="titre de poste">titre</h2>
-    <div title="date">date</div>
+<div class="border m-2 p-2 rounded border-primary">
+  <div class="row" >
+    <div class="col-lg-9">
+      <h2 title="titre de poste"><strong>titre</strong></h2>
+    </div>
+    <div class="col-lg-3">
+      <div title="date">date</div>
+    </div>
   </div>
-  <div>
-    <p title="contenu de post">contenu contenu contenu contenu contenu contenu contenu contenu contenu </p>
-  </div>
-  <div>
-    <button title="loveIt button">love It</button>
-    <button title="don't loveIt button">don't Love It</button>
+  <div class="row">
+    <div class="col-lg-12">
+      <p title="contenu de post">contenu contenu contenu contenu contenu contenu contenu contenu contenu
+        contenu contenu contenu contenu contenu contenu contenu contenu contenu
+        contenu contenu contenu contenu contenu contenu contenu contenu contenu </p>
+      <div>
+        <button title="loveIt button" type="button" class="btn btn-success m-1">love It</button>
+        <button title="don't loveIt button" type="button" class="btn btn-danger m-1">don't Love It</button>
+      </div>
+    </div>
   </div>
 </div>
+
+
