--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,8 @@
     Welcome to {{ titleApp }}!
   </h1>
 </div>
-<div title="posts">
-  <app-post-list></app-post-list>
+<div class="container align-content-center">
+       <app-post-list></app-post-list>
 </div>
-
 
 <router-outlet></router-outlet>
