--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,4 +1,13 @@
-<div title="postList">
-  <h1>Liste des Posts</h1>
-  <app-post-list-item *ngFor="let post of posts"></app-post-list-item>
+<div class="row">
+  <div class="col-xs-12">
+  <h1>Posts</h1>
+  </div>
+</div>
+<div class="row mt-auto">
+  <div class="col-xs-12">
+  <app-post-list-item></app-post-list-item>
+  <app-post-list-item></app-post-list-item>
+  <app-post-list-item></app-post-list-item>
+  <app-post-list-item></app-post-list-item>
+  </div>
 </div>
