add typscript code and the communication between the .ts and the .html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   </h1>
 </div>
 <div class="container align-content-center">
-       <app-post-list></app-post-list>
+       <app-post-list [arrayPosts]="posts"></app-post-list>
 </div>
 
 <router-outlet></router-outlet>
