--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,30 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ titleApp }}!
-  </h1>
+
+
+
+<div class="container-fluid">
+  <nav class="navbar navbar-light bg-light navbar-expand-md">
+    <div class="navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="nav-item" routerLinkActive="active">
+          <a  class="nav-link" routerLink="posts">Posts</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a  class="nav-link" routerLink="new">Nouveau post</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 </div>
-<div class="container align-content-center">
-       <app-post-list [arrayPosts]="posts"></app-post-list>
+<div class="container">
+  <div *ngIf="connectionStatus === 'online'" class="online">
+    <span>{{connectionStatusMessage}}</span>
+  </div>
+  <div *ngIf="connectionStatus === 'offline'" class="offline">
+    <span>{{connectionStatusMessage}}</span>
+  </div>
+    <router-outlet></router-outlet>
 </div>
 
-<router-outlet></router-outlet>
+
+
+
